			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-09-16

	* Fix bogus t.maint failures on some systems that don't use bash for
	  /bin/sh (for instance, FreeBSD).

	2005-09-11

	* Resurrected atexit() code to ensure databases have been
          closed (needed for rare cases on RISC OS).

	2005-09-07

	* Perform unicode conversion after base64 and quoted-printable
	  decoding.  (Thanks to Mikhael Zabaluev for the patch)

	2005-09-06

	* (sqlite3 based builds only) Print reminder to register tokens before
	  scoring if preparing the SELECT statement fails.

	* Avoid "obsolete option -I- used, please use -iquote instead" nagging
	  from GCC version 4. (Heck, autoconf has even reached include lines
	  that worked for ages.)

	2005-09-05

	* Replace mime stack by linked list (to correct gentoo bug #69893).
	* Fix configure's --with-included-gsl option.  (Thanks to
          Torsten Veller for the patch)

0.96.1	2005-09-05

	2005-08-24

	* Fix incompatibility with SunOS make(1S), adding a missing trailing
	  backslash character to src/Makefile.am.

	2005-08-17

	* Update RISC OS versions of Makefile and config.h

0.96.0	2005-08-15

	2005-08-14

	* When directory name is argument for bogoutil's dump/load
	  option, use "wordlist.db" to avoid a sigsegv.

	* Remove support for TDB, the Trivial Database.

	2005-08-05

	* db_lock.c: rename "cell_t" to "bf_cell_t" to avoid clashing with
	  IRIX's cell_t. Reported by Daichi Kawahata.

	* configure.ac: MIPS doesn't have extended FP precisiopn. Patch by
	  Daichi Kawahata.

	2005-08-03

	* bogotune - Restored code for recommending db_cachesize value.

	2005-07-10
