@@ -8,7 +8,7 @@ databases.
 
 1. Overview -----------------------------------------------------------
 
-Bogofilter 0.93.3 and newer can use SQLite 3.2.2 and newer to store
+Bogofilter 0.93.3 and newer can use SQLite 3.2.6 and newer to store
 their tokens. SQLite is a database that handles a large SQL subset and
 stores all tables in one permanent file, and the journal for changes in
 one temporary file that gets automatically removed when no longer
@@ -19,12 +19,12 @@ sqlite3.
 
 2.1 Compatibility - supported SQLite versions
 
-At this time, only SQLite 3.2.2 and newer are supported.
+At this time, only SQLite 3.2.6 and newer are supported.
 
 2.2 Installation
 
 To use bogofilter with the SQLite3 back-end driver, you must install
-SQLite 3.2.2 or newer before configuring bogofilter. You can download
+SQLite 3.2.6 or newer before configuring bogofilter. You can download
 SQLite 3 and find installation instructions for SQLite 3 at
 <http://sqlite.org/>, the SQLite installation is pretty straightforward.
 
